--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/multer": "^1.4.11",
     "better-sqlite3": "^9.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
